--- a/css/style.css
+++ b/css/style.css
@@ -1079,3 +1079,16 @@ section {
   color: #777;
   padding: 1rem 0;
 }
+.table-container {
+  overflow: auto;
+}
+
+.table-container tr td {
+  border: 1px solid black;
+  padding: 15px;
+}
+
+.table-container tr th {
+  border: 1px solid black;
+  padding: 15px;
+}
