--- a/css/style.css
+++ b/css/style.css
@@ -1117,6 +1117,7 @@ section {
    flex-wrap: wrap;
    align-items: flex-start;
    gap:20px;
+   padding:15px;
 }
 
 .container1 .main-video-container{
