--- a/css/style.css
+++ b/css/style.css
@@ -1102,12 +1102,21 @@ section {
   margin-top: -35px;
 }
 
+.teks ul li {
+  font-size: 1.6rem;
+  line-height: 0.5;
+  color: #777;
+  padding: 1rem 0;
+  margin-left: 50px;
+  margin-top: -35px;
+}
+
 /* start video css */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap');
 
 
 .warna {
-  background-color: seagreen;
+  background: linear-gradient(to right, #0eb582, #f0fdfa );
 }
 
 .container1{
