meambahkan page mikrotik

--- a/css/style.css
+++ b/css/style.css
@@ -981,6 +981,68 @@ section {
   color: #0eb582;
 }
 
+
+/* img hover */
+.container {
+  position: relative;
+}
+
+.container .image-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+  justify-content: center;
+  padding: 10px;
+}
+
+.container .image-container img {
+  border-radius: 20px;
+  width: 80%;
+}
+
+
+.container .image-container .image:hover img {
+  transform: scale(1.1);
+}
+
+.container .popup-img {
+  position: fixed; 
+  top: 0;
+  left: 0;
+  background: rgb(0, 0, 0,.9);
+  height: 100%;
+  width: 100%;
+  z-index: 100;
+  display: none;
+}
+
+.container .popup-img span {
+  position: absolute;
+  margin-top: 190px;
+  right: 10px;
+  font-size: 40px;
+  font-weight: bolder;
+  color:#fff;
+  cursor: pointer;
+}
+
+.container .popup-img img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 5px;
+  width: 550px;
+  object-fit: cover;
+  padding: 60px;
+}
+
+
+/* akhir img hover */
+
+
+
+
 @media (max-width: 1200px) {
   .header {
     padding: 2rem 5%;
@@ -1081,6 +1143,7 @@ section {
 }
 .table-container {
   overflow: auto;
+  margin-top: 30px;
 }
 
 .table-container tr td {
@@ -1110,7 +1173,23 @@ section {
   margin-left: 50px;
   margin-top: -35px;
 }
+.about .content ol li {
+  font-size: 1.6rem;
+  line-height: 0.5;
+  color: #777;
+  padding: 1rem 0;
+  margin-left: 50px;
+  margin-top: -35px;
+}
 
+.teks ol li {
+  font-size: 1.6rem;
+  line-height: 0.5;
+  color: #777;
+  padding: 1rem 0;
+  margin-left: 50px;
+  margin-top: -35px;
+}
 /* start video css */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap');
 
