--- a/css/style.css
+++ b/css/style.css
@@ -1364,6 +1364,7 @@ body a {
   border-bottom-right-radius: 25px;
 }
 
+/* animasi tulisan bergerak */
 .anim-text {
   background-image: linear-gradient(90deg, #065ba5, #d630f2, #ff002f, #e4ff00, #d630f2, #065ba5);
   background-size: 300%;
@@ -1377,4 +1378,20 @@ body a {
 @keyframes animate {
   0%{background-position:0 0}
   100%{background-position:300% 0}
+}
+
+/* akhir animasi tulisan bergerak */
+
+.paralax {
+  background-image: url(../images/IKLAN-PARALAX\ 2.gif);
+  height: 150px;
+  width: 100%;
+  background-attachment: fixed;
+}
+
+.paralax1 {
+  background-image: url(../images/Iklan\ paralax\ 1.webp);
+  height: 150px;
+  width: 100%;
+  background-attachment: fixed;
 }
