--- a/css/style.css
+++ b/css/style.css
@@ -901,6 +901,7 @@ section {
 
 .footer {
   background: #f0fdfa;
+  border-top: 1px solid red;
 }
 
 .footer .box-container {
@@ -1405,3 +1406,18 @@ body a {
 .image {
   box-shadow: 20px 20px 35px #d0d0d0, -20px -20px 35px #fff;
 }
+
+
+/* komentar */
+:root {
+  --white: #fff;
+  --black: #1c2b2d;
+  --blue: #31326f;
+  --color-primary: #9d0191;
+  --color-sec: #db6400;
+  --color-grey: #eee;
+  --color-dark-grey: #222831;
+}
+
+
+/* akhir komentar */
