--- a/css/style.css
+++ b/css/style.css
@@ -451,6 +451,20 @@ section {
   width: 100%;
 }
 
+/* image bagian cisco */
+
+.about .image {
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 40rem;
+  flex: 1 1 40rem;
+}
+
+.about .image img {
+  width: 100%;
+}
+
+/* selesai bagian img cisco */
+
 .about .content {
   -webkit-box-flex: 1;
   -ms-flex: 1 1 40rem;
